# hien

./: README.adoc  README.md  meson.build
docs/LanguageReference/: LexicalStructures.adoc  SourceFile.adoc
include/hien/codegen/: codegen.h
include/hien/parse/: Parser.h
include/hien/parse/tokenize/: Lexeme.h  Lexer.h
include/hien/syntax/: SourceBuffer.h  SyntaxKind.h  SyntaxNode.h  SyntaxText.h  TokenKind.h
include/hien/util/: Range.h  RawBuffer.h
lib/: meson.build
lib/codegen/: codegen.c
lib/parse/: Parser.c  Parser.h
lib/parse/syntax/: ParseSyntax.c  ParseSyntax.h
lib/parse/tokenize/: Lexeme.c  Lexer.c
lib/syntax/: SourceBuffer.c  SyntaxNode.c  SyntaxText.c
lib/util/: Range.c  RawBuffer.c
subprojects/: .gitignore
tools/: meson.build
tools/hien-driver/: main.cpp
unit-tests/: meson.build
unit-tests/CodegenTests/: CodegenTests.cpp
unit-tests/ParseTests/: ParseTests.cpp  TokenizeTests.cpp
unit-tests/ParseTests/Util/: Lexeme.hpp  SyntaxText.hpp  TokenKind.hpp
